# ddhlsboz

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  PRESENTATION_PROMPT.md  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  compose.dev.yaml  package.json  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  scan.yaml
00_Канон/: A_canonical.md  neurofest_master.md
01_Заявка/: 01_заявка_полный_пакет.md  02_краткое_описание.md  03_проблема_и_решение.md  04_бизнес_модель.md  05_команда.md  06_дорожная_карта.md  07_KPI.md  08_риски.md  09_data_protection.md  10_responsible_ai.md
02_Презентация/: 01_skeleton.md  02_тексты_слайдов.md  03_заметки_спикера.md  04_визуальный_бриф.md  05_PDF_версия.md  06_альт_версия.md
03_Питч/: 01_pitch_90sec.md  02_pitch_3min.md  03_video_60sec_сценарий.md  04_видео_сторителлинг.md  05_Q_and_A_25.md  06_продакшен_видео.md  07_лендинг_тексты.md
04_Бренд/: 01_naming.md  02_цвета_типографика.md  03_logo_brief.md  04_UI_kit.md  05_иллюстрации_brief.md  06_brand_book.md
05_Юр_пакет/: 01_политика_ПД.md  02_согласие_ПД.md  03_terms_of_use.md  04_NDA_шаблон.md  05_пилотное_соглашение.md  06_реестр_ПД.md  07_авторское_право.md  08_этический_протокол.md
06_Методички/: 01_методичка_учитель_литературы.md  02_методичка_учитель_истории.md  03_методичка_библиотекарь.md  04_методичка_музей.md  05_методичка_родитель.md  06_методичка_подросток.md
07_Прототип/: 01_архитектура.md  02_API_спецификация.md  03_корпус_реестр.md  04_RAG_pipeline.md  05_лицензии.md  06_Telegram_bot.md  07_деплой.md  08_тестирование.md  mockup.html
08_Маркетинг/: 01_позиционирование.md  02_контент_план.md  03_лендинг.md  04_соцсети.md  05_PR_стратегия.md  06_email_маркетинг.md  07_партнёрские_коммуникации.md  08_метрики_воронки.md  09_вакансии_креаторов.md
09_B2G_B2B_продажи/: 01_B2G_стратегия.md  02_B2B_школа.md  03_B2B_библиотека.md  04_B2B_музей.md  05_коммерческое_предложение.md  05_пушкинская_монетизация.md  06_питч_встреча.md  07_тарифы.md  08_закупки_44ФЗ.md
10_Гранты/: 01_грантовая_стратегия.md  02_заявка_фонд_Бортника.md  03_заявка_Сколково.md  04_заявка_ПФКИ.md  05_заявка_Минцифры.md  06_отчётность.md
11_Пилот_аналитика/: 01_пилотный_план.md  02_дашборды.md  03_KPI_продукта.md  04_отчёт_пилота_шаблон.md  05_аналитический_пакет_B2G.md  06_AB_эксперименты.md  07_синтетические_данные.md
12_FAQ_питч/: 01_FAQ_25_вопросов.md  02_Q&A_по_секциям.md  03_бенчмарк_RAG.md  04_риск_реестр.md  05_питч_репетиции.md  06_конкурентный_анализ.md  07_one_pager.md
13_Письма_поддержки/: 01_шаблон_РГБ.md  02_шаблон_школа.md  03_шаблон_библиотека.md
apps/api-gateway/: pyproject.toml
apps/api-gateway/app/: __init__.py  config.py  data_origin.py  dependencies.py  main.py  models.py  state.py
apps/api-gateway/app/routers/: __init__.py  eta_batch.py  fleet_match.py  flood_risk.py  health.py  isochrone.py  route.py  site_selection.py  trigger_feed.py
apps/api-gateway/tests/: test_data_origin.py  test_health_contract.py  test_smoke.py
apps/b2b-dashboard/: README.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/b2c-app/: README.md  app.json  biome.json  package.json  tsconfig.json
apps/eta-service/: pyproject.toml
apps/eta-service/app/: __init__.py  main.py
apps/flood-service/: pyproject.toml
apps/flood-service/app/: __init__.py  main.py
apps/ingestion-sar/: pyproject.toml
apps/ingestion-sar/app/: __init__.py  main.py
apps/ingestion-sdk-collector/: pyproject.toml
apps/ingestion-sdk-collector/app/: __init__.py  main.py
apps/ingestion-vetc/: pyproject.toml
apps/ingestion-vetc/app/: __init__.py  main.py
apps/ingestion-weather/: pyproject.toml
apps/ingestion-weather/app/: __init__.py  main.py
apps/ops-tools/: pyproject.toml
apps/routing-engine/: pyproject.toml
apps/routing-engine/app/: __init__.py  main.py
apps/tile-server/: pyproject.toml
apps/trigger-feed/: pyproject.toml
apps/trigger-feed/app/: __init__.py  main.py
backend/: .env.example  pyproject.toml
backend/app/: audit.py  benchmark.py  challenge.py  characters.py  corpus.py  dashboard.py  exam_plan.py  exports.py  i18n.py  literary_calendar.py  main.py  mindmap.py  observability.py  privacy.py  pushkin.py  quickread.py  quote_game.py  rag.py  ratelimit.py  retrieval.py  roi.py  safety.py  schemas.py  srs.py  state.py  study.py  trainer.py  tts.py
backend/app/llm/: __init__.py  base.py  gigachat.py  mock.py  router.py  yandex.py
backend/app/search/: __init__.py  bm25.py  chunking.py  embeddings.py  hybrid.py  reranker.py  stemmer.py  tokenizer.py  vector.py
backend/tests/: test_api.py  test_audit.py  test_benchmark.py  test_curator_schema.py  test_exports.py  test_gigachat_config.py  test_llm_breaker.py  test_llm_live.py  test_llm_router.py  test_mindmap.py  test_new_features.py  test_observability.py  test_privacy.py  test_pushkin.py  test_rag.py  test_ratelimit.py  test_safety.py  test_search.py  test_srs.py  test_state_persistence.py  test_study.py  test_study_quiz.py  test_tts.py
bot/: README.md  bot.py  pyproject.toml  requirements.txt
bot/tests/: test_bot.py
bots/: __init__.py  core.py  pyproject.toml
bots/adapters/: __init__.py  max.py  vk.py
bots/tests/: test_core.py
data/seed/: demographics.json  fleets.json  flood_markers.json  graph_edges.json  graph_nodes.json  orgs.json  policies.json
docs/: DEV_KIT.md  GAMES_SPEC.md  PRODUCT.md  PROMPTS.md  README.md  ROADMAP.md  STATE.md  STRATEGY.md  STUDY_MODE_SPEC.md
docs/adr/: 0001-record-architecture-decisions.md  0002-monorepo-uv-pnpm.md  0003-k-anonymity-50.md  0004-osrm-mld-with-lua.md
docs/api/: QUICKSTART.md  postman_collection.json
docs/architecture/: OVERVIEW.md
docs/archive/: TODO_v2.md  notes_pr6_pr14.md
docs/compliance/: PRIVACY_BRIEF.md
docs/conventions/: coding.md
docs/data/: data-dictionary.md
docs/demo/: SCRIPT.md  (+1 more)
evaluation/: README.md  report.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
tools/: generate_seed.py
(+86 files in other folders)
