[tool.poetry]
name = "app"
version = "0.1.0"
description = "ЧитАИ — backend (RAG + YandexGPT/GigaChat router)"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.136.1"}
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
# PR#9/PR#PDF/PR#URL: универсальный ingest pipeline (text/url/pdf).
# Audio (PR#23) и YouTube/VK через httpx + Yandex SpeechKit подключаются
# рантайм-стабом; библиотеки yt-dlp/whisper не пин-нятся, чтобы не ломать сборку
# на машинах без ffmpeg.
pypdf = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
respx = "^0.21.1"
ruff = "^0.7.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
