[project]
name = "chitai-bot"
version = "0.1.0"
description = "ЧитАИ — Telegram-бот (aiogram 3.x)"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.4,<4.0",
  "httpx>=0.27,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
