[project]
name = "eta-service"
version = "0.1.0"
description = "RoadPulse ETA inference micro-service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "roadpulse-core",
    "roadpulse-ml",
    "roadpulse-telemetry",
]

[tool.uv.sources]
roadpulse-core = { workspace = true }
roadpulse-ml = { workspace = true }
roadpulse-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
