[project]
name = "flood-service"
version = "0.1.0"
description = "RoadPulse flood-scoring micro-service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "roadpulse-ml",
    "roadpulse-telemetry",
]

[tool.uv.sources]
roadpulse-ml = { workspace = true }
roadpulse-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
