[project]
name = "routing-engine"
version = "0.1.0"
description = "RoadPulse routing engine wrapper (OSRM + Python fallback)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "roadpulse-core",
    "roadpulse-routing",
    "roadpulse-telemetry",
]

[tool.uv.sources]
roadpulse-core = { workspace = true }
roadpulse-routing = { workspace = true }
roadpulse-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
