[project]
name = "trigger-feed"
version = "0.1.0"
description = "RoadPulse parametric-insurance trigger feed"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "cryptography>=42.0",
    "roadpulse-telemetry",
]

[tool.uv.sources]
roadpulse-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
